using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants
{
    public const string PLAYER_ANIM_BOOL_RUN = "running";
    public const string PLAYER_ANIM_BOOL_DUCK = "duck";
    public const string PLAYER_ANIM_BOOL_JUMP = "jump";
    public const string PLAYER_ANIM_BOOL_ATTACK = "attack";
    public const string PLAYER_ANIM_BOOL_AIR_ATTACK = "airAttack";
    public const string PLAYER_ANIM_BOOL_DUCK_SLASH = "duckSlash";
    public const string PLAYER_ANIM_BOOL_DOUBLE_JUMP = "doubleJump";
    public const string ENEMY_ANIM_BOOL_ATTACK = "attack";
    public const string ANIM_BOOL_HURT = "hurt";
    public const string ANIM_BOOL_DIE = "die";
    public const string ANIM_BOOL_DEAD = "dead";
    public const string ANIM_BOOL_RUN = "run";
    public const string ANIM_BOOL_FLY = "fly";
    public const string PLAYER_ANIM_BOOL_FALL = "fall";

    public const string PARTICLE_ENEMY_HIT = "Particles/EnemyHitParticle";
    public const string PARTICLE_ENEMY_DIE = "Particles/EnemyDieParticle";
    public const string PARTICLE_PLAYER_HIT = "Particles/PlayerHitParticle";
    public const string PARTICLE_PLAYER_TAKES_LIFE = "Particles/PlayerTakeLifeParticle";
    public const string PARTICLE_CAST_SHOT = "Particles/CastNormalShotParticle";

    public const string PREFAB_HEARTH = "Prefabs/Items/Hearth";
    public const string PREFAB_MINI_HEARTH = "Prefabs/Items/MiniHearth";
    public const string PREFAB_GOLD_COIN = "Prefabs/Items/GoldCoin";
    public const string PREFAB_PLATE_COIN = "Prefabs/Items/PlateCoin";
    public const string PREFAB_BRONZE_COIN = "Prefabs/Items/BronzeCoin";
    public const string TAG_PLAYER_WEAPON = "PlayerWeapon";
    public const string TAG_PLAYER = "Player";
    public const string TAG_ENEMY = "Enemy";
    public const string TAG_MINI_HEARTH = "SpecialGO/Objects/MiniHearth";
    public const string TAG_HEARTH = "SpecialGO/Objects/Hearth";
    public const string TAG_GOLD_COIN = "SpecialGO/Objects/GoldCoin";
    public const string TAG_PLATE_COIN = "SpecialGO/Objects/PlateCoin";
    public const string TAG_BRONZE_COIN = "SpecialGO/Objects/BronzeCoin";
    public const string TAG_DJUMP = "SpecialGO/Objects/DJump";
    public const string TAG_SLASH = "SpecialGO/Objects/Slash";
    public const string TAG_FORCE = "SpecialGO/Objects/Force";
    public const string TAG_LIFE = "SpecialGO/Objects/Life";

    public const string TAG_ENEMY_SHOOT = "EnemyShot";
}